--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -1,39 +1,69 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'blog/img/favicon.ico' %}" rel="icon" type="image/x-ico">
     <!-- 静态资源引用 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- bootstrap相关js文件 -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script> 
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>阿星的小站</title>
 </head>
 <style>
-    body{
-        background-image: url(https://hacgapp.net/img/topBG.jpg);
+    body {
+        background-image: url({{url}});
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center center;
     }
-    .logo{
-        padding-top: 100px;
+
+    body::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: "";
+        background-color: black;
+        opacity: 0.3;
+        width: 100%;
+        height: 100%;
     }
-    .logo img{
+
+    .logo {
+        position: relative;
+        padding-top: 100px;
+        text-shadow: 0px 1px 4px #000;
+    }
+    .logo img {
         max-width: 150px;
+        transition: all 1s;
+    }
+    .logo img:hover{
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+    }
+    .logo a{
+        transition: all 0.25s;
+        color:aliceblue
+    }
+    .logo a:hover{
+        text-decoration: double;
+        font-size: 1.5rem;
     }
 </style>
+
 <body>
     <div class="logo text-center">
-        <img src="{% static 'blog/img/头像.jpg' %}" class="rounded-circle" alt="头像">
-        <hr>
-        <h2 class="text-light">阿星的小站</h2>
-        <hr>
-        <a href="./blog/"><h5 class="text-light">博客</h5></a>
+        <img src="{% static 'blog/img/头像.jpg' %}" class="rounded-circle img-thumbnail" alt="头像">
+        <h2 class="text-light" style="margin-top: 1rem;">阿星的小站</h2>
+        <br>
+        <h5 class="text-light"><a href="./blog/">博客</a></h5>
     </div>
 </body>
+
 </html>
