--- a/blog/templates/admin/admin.html
+++ b/blog/templates/admin/admin.html
@@ -8,6 +8,7 @@
     <link href="{% static 'blog/img/favicon.ico' %}" rel="icon" type="image/x-ico">
     <!-- 静态资源引用 -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'admin/css/admin.css' %}">
     <!-- bootstrap相关js文件 -->
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
@@ -15,6 +16,22 @@
     <title>阿星的小站</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a href="{% url 'index'%}" class="navbar-brand">阿星的小站</a>
+        </nav>
+    </header>
+    <div class="row justify-content-between">
+        <div class="col-2" style="border-right: 1px solid black;">
+            <nav class="nav flex-column">
+                <a href="." class="nav-link active" id="v-tab">我的文章</a>
+                <a href="." class="nav-link" id="v-tab">账号信息</a>
+                <a href="." class="nav-link" id="v-tab">系统设置</a>
+            </nav>
+        </div>
+        <div class="col-9"></div>
+    </div>
+    
     <footer class="text-center">
         {% include "blog/footer.html" %}
     </footer>
