--- a/blog/templates/admin/log.html
+++ b/blog/templates/admin/log.html
@@ -1,1 +1,51 @@
-登录页面
+<!DOCTYPE html>
+<html lang="zh">
+
+<head>
+    {% load static %}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'blog/img/favicon.ico' %}" rel="icon" type="image/x-ico">
+    <!-- 静态资源引用 -->
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'admin/css/admin.css' %}">
+    <!-- bootstrap相关js文件 -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <title>阿星的小站</title>
+</head>
+<style>
+    body {
+        background-image: url({{img_url}});
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center center;
+    }
+</style>
+
+<body>
+    <div class="container">
+        <div class="logo card">
+            <div class="card-header">用户登录</div>
+            <form action="{% url 'login' %}" method="post" class="card-body">
+                {% csrf_token %}
+                <div class="form-group text-left">
+                    <label for="username">用户名：</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="请输入用户名">
+                </div>
+                <div class="form-group text-left">
+                    <label for="pwd">密码：</label>
+                    <input type="password" name="pwd" id="pwd" class="form-control" placeholder="请输入密码">
+                </div>
+                <div class="form-group row justify-content-between" style="margin: 0;">
+                    <button type="submit" class="btn btn-primary col-5" name='login'>登录</button>
+                    <button type="submit" class="btn btn-secondary col-5" name='regist'>注册</button>
+                </div>
+                <span class="text-warning" id="error_msg">{{err_msg}}</span>
+            </form>
+
+        </div>
+    </div>
+</body>
