--- a/blog/templates/blog/layout.html
+++ b/blog/templates/blog/layout.html
@@ -46,33 +46,33 @@
                         {% endfor %}
                     </ul>
                 </nav>
-                <h3><a href="{% url 'index'%}"><img style="height: 64px;"
-                            src="{% static 'blog/img/logo.png' %}" /></a></h3>
+                <h3><a href="{% url 'index'%}"><img style="height: 64px;" src="{% static 'blog/img/logo.png' %}" /></a>
+                </h3>
             </hgroup>
             <!-- 移动端导航 -->
-            <hgroup class="bg-light">
-                <nav class="d-sm-none navbar navbar-light navbar-expand-md">
+
+                <nav class="d-sm-none navbar navbar-expand-md navbar-light bg-light">
                     <a href="{% url 'index'%}" class="navbar-brand">阿星的小站</a>
-                    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#headlist"
-                        aria-expanded="false" aria-controls="headlist">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#headlist" aria-controls="headlist" aria-expanded="false"
+                        aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    <div class="collapse navbar-collapse" id="headlist">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item"><a href="{% url 'blog_home'%}" class="nav-link" id="index">首页</a></li>
+                            {% for category in category_list %}
+                            <li class="nav-item"><a href="{% url 'show_cate' category.id %}" class="nav-link">{{category.name}}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </nav>
-                <div class="collapse navbar navbar-collapse" id="headlist">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="{% url 'blog_home'%}" class="nav-link" id="index" style="color:rgba(0,0,0.9);">首页</a></li>
-                        {% for category in category_list %}
-                        <li class="nav-item"><a href="{% url 'show_cate' category.id %}" class="nav-link"
-                                style="color:rgba(0,0,0.9);">{{category.name}}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </hgroup>
+
         </div>
     </header>
     <div class="container">
         <!-- 主体 -->
-        <div class="row tbody justify-content-between">
+        <div class="row tbody justify-content-between" style="margin-left: 0;margin-right: 0;">
             <div class="col-md-9">{% block content %}{% endblock %}</div>
             <div class="col-md-3 d-none d-sm-block">{% include "blog/sidebar.html" %}</div>
         </div>
