--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -36,22 +36,35 @@
 
     .logo {
         position: relative;
-        padding-top: 100px;
+        padding-top: 45%;
         text-shadow: 0px 1px 4px #000;
     }
+
+    @media screen and (min-width:480px) {
+        .logo {
+            position: relative;
+            padding-top: 15%;
+            text-shadow: 0px 1px 4px #000;
+        }
+    }
+
+    
     .logo img {
         max-width: 150px;
         transition: all 1s;
     }
-    .logo img:hover{
+
+    .logo img:hover {
         transform: rotate(360deg);
         -webkit-transform: rotate(360deg);
     }
-    .logo a{
+
+    .logo a {
         transition: all 0.25s;
-        color:aliceblue
+        color: aliceblue
     }
-    .logo a:hover{
+
+    .logo a:hover {
         text-decoration: double;
         font-size: 1.5rem;
     }
