--- a/blog/static/admin/css/admin.css
+++ b/blog/static/admin/css/admin.css
@@ -2,3 +2,8 @@
     max-width: 400px;
     margin: 20% auto 0;
 }
+@media screen and (min-width: 480px){
+    header{
+        margin-bottom: 1.5rem;
+    }
+}
