--- a/blog/templates/admin/admin.html
+++ b/blog/templates/admin/admin.html
@@ -18,7 +18,7 @@
     <title>阿星的小站</title>
 </head>
 
-<body>
+<body style="background-color:#f8f9fa;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a href="{% url 'index' %}" class="navbar-brand">阿星的小站</a>
@@ -35,14 +35,15 @@
         <div class="row">
             <div class="col-3" id="page_siderbar">
                 <div class="list-group">
-                    <a href="." class="list-group-item list-group-item-action active"><i class="fas fa-home"></i>&nbsp;首页</a>
-                    <a href="." class="list-group-item list-group-item-action"><i class="fas fa-book"></i>&nbsp;我的文章</a>
-                    <a href="." class="list-group-item list-group-item-action"><i class="fas fa-th-list"></i>&nbsp;分类管理</a>
-                    <a href="." class="list-group-item list-group-item-action"><i class="fas fa-tag"></i>&nbsp;标签管理</a>
-                    <a href="." class="list-group-item list-group-item-action"><i class="fas fas-comments"></i>&nbsp;评论管理</a>
+                    <a href="{% url 'action' 'home' %}" class="list-group-item list-group-item-action active"><i class="fas fa-home"></i>&nbsp;首页</a>
+                    <a href="{% url 'action' 'article' %}" class="list-group-item list-group-item-action"><i class="fas fa-book"></i>&nbsp;我的文章</a>
+                    <a href="{% url 'action' 'category' %}" class="list-group-item list-group-item-action"><i class="fas fa-th-list"></i>&nbsp;分类管理</a>
+                    <a href="{% url 'action' 'tag' %}" class="list-group-item list-group-item-action"><i class="fas fa-tag"></i>&nbsp;标签管理</a>
+                    <a href="{% url 'action' 'comment' %}" class="list-group-item list-group-item-action"><i class="fas fas-comments"></i>&nbsp;评论管理</a>
                 </div>
             </div>
             <div class="col-9" id="page_container">
+                {% block content %}{% endblock %}
                 <footer class="text-center">
                     {% include "blog/footer.html" %}
                 </footer>
