--- a/blog/templates/admin/home.html
+++ b/blog/templates/admin/home.html
@@ -1,4 +1,8 @@
 {% extends "admin/admin.html" %}
 {% block content %}
+<div>
+    <h2 class="text-primary">个人中心</h2>
+    <hr>
+</div>
 这是管理页面首页{{param}}
 {% endblock %}
