初步确定管理首页，添加文章页

--- a/blog/templates/admin/admin.html
+++ b/blog/templates/admin/admin.html
@@ -35,11 +35,11 @@
         <div class="row">
             <div class="col-3" id="page_siderbar">
                 <div class="list-group">
-                    <a href="{% url 'action' 'home' %}" class="list-group-item list-group-item-action active"><i class="fas fa-home"></i>&nbsp;首页</a>
-                    <a href="{% url 'action' 'article' %}" class="list-group-item list-group-item-action"><i class="fas fa-book"></i>&nbsp;我的文章</a>
-                    <a href="{% url 'action' 'category' %}" class="list-group-item list-group-item-action"><i class="fas fa-th-list"></i>&nbsp;分类管理</a>
-                    <a href="{% url 'action' 'tag' %}" class="list-group-item list-group-item-action"><i class="fas fa-tag"></i>&nbsp;标签管理</a>
-                    <a href="{% url 'action' 'comment' %}" class="list-group-item list-group-item-action"><i class="fas fas-comments"></i>&nbsp;评论管理</a>
+                    <a href="{% url 'action' 'home' %}" class="list-group-item list-group-item-action" id="action_home"><i class="fas fa-home"></i>&nbsp;首页</a>
+                    <a href="{% url 'action' 'article' %}" class="list-group-item list-group-item-action" id="action_article"><i class="fas fa-book"></i>&nbsp;我的文章</a>
+                    <a href="{% url 'action' 'category' %}" class="list-group-item list-group-item-action" id="action_category"><i class="fas fa-th-list"></i>&nbsp;分类管理</a>
+                    <a href="{% url 'action' 'tag' %}" class="list-group-item list-group-item-action" id="action_tag"><i class="fas fa-tag"></i>&nbsp;标签管理</a>
+                    <a href="{% url 'action' 'comment' %}" class="list-group-item list-group-item-action" id="action_comment"><i class="fas fa-comments"></i>&nbsp;评论管理</a>
                 </div>
             </div>
             <div class="col-9 rounded" id="page_container">
