--- a/blog/templates/admin/comment.html
+++ b/blog/templates/admin/comment.html
@@ -1,4 +1,7 @@
 {% extends "admin/admin.html" %}
 {% block content %}
 这是评论页面{{param}}
+<script>
+    $("#action_comment").addClass("active");
+</script>
 {% endblock %}
