--- a/blog/templates/admin/tag.html
+++ b/blog/templates/admin/tag.html
@@ -1,4 +1,7 @@
 {% extends "admin/admin.html" %}
 {% block content %}
 这是标签页面{{param}}
+<script>
+    $("#action_tag").addClass("active");
+</script>
 {% endblock %}
