--- a/blog/templates/admin/category.html
+++ b/blog/templates/admin/category.html
@@ -1,4 +1,7 @@
 {% extends "admin/admin.html" %}
 {% block content %}
 这是分类页面{{param}}
+<script>
+    $("#action_category").addClass("active");
+</script>
 {% endblock %}
