--- a/blog/templates/admin/article.html
+++ b/blog/templates/admin/article.html
@@ -4,9 +4,36 @@
 <div>
     <h2 class="text-primary">我的文章</h2>
     <hr>
-    <h4 class="text-secondary">文章目录<a href="." title="撰写新文章"><i class="float-right fas fa-plus-square"></i></a></h4>   
+    <h4 class="text-secondary">文章目录<a href="." title="撰写新文章"><i class="float-right fas fa-plus-square"></i></a></h4>
+    {% for article in article_list %}
+    <article style="margin: 10px 0px;">
+        <span><a href="{% url 'show_post' article.id %}">{{article.title}}</a></span>
+        <span class="info" style="float: right;"><small>
+                <author><a href="">编辑</a></author><span> •发布时间
+                </span><time>{{article.createTime}}</time>
+            </small>
+        </span>
+    </article>
+    {% endfor %}
+    <!-- 分页 -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" id="FrontPage">
+                <a class="page-link" href="#" tabindex="-1">上一页</a>
+            </li>
+            {% for page in page_count_list %}
+            <li id="{{page}}" class="page-item"><a class="page-link" href="./?page={{page}}">{{page}}</a></li>
+            {% endfor %}
+            <li class="page-item" id="BackPage">
+                <a class="page-link" href="#">下一页</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 <script>
     $("#action_article").addClass("active");
+    var ActivePage = parseInt("{{active_page}}");
+    var TotalPage = parseInt("{{page_count}}");
+    var ActiveCate = parseInt("{{category_id}}");
 </script>
 {% endblock %}
