微调样式，调整目录结构

--- a/blog/templates/admin/admin.html
+++ b/blog/templates/admin/admin.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/popper.js/2.4.0/umd/popper.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
-    <script src="{% static 'admin/js/page.js' %}"></script>
+    <script src="{% static 'page.js' %}"></script>
     <title>阿星的小站</title>
 </head>
 
