完善文章“改”

--- a/blog/templates/admin/article.html
+++ b/blog/templates/admin/article.html
@@ -1,6 +1,7 @@
 {% extends "admin/admin.html" %}
 {% block content %}
 {% load static %}
+<script src="{% static 'page.js' %}"></script>
 <div>
     <h2 class="text-primary">我的文章</h2>
     <hr>
